--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@11ty/eleventy-plugin-inclusive-language": "^1.0.3",
     "@11ty/eleventy-plugin-rss": "^1.2.0",
     "@11ty/eleventy-plugin-syntaxhighlight": "^4.1.0",
+    "@11tyrocks/eleventy-plugin-emoji-readtime": "^1.0.1",
     "tailwindcss": "^3.0.23"
   },
   "devDependencies": {
