--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "@11ty/eleventy-plugin-inclusive-language": "^1.0.3",
     "@11ty/eleventy-plugin-rss": "^1.2.0",
     "@11ty/eleventy-plugin-syntaxhighlight": "^4.1.0",
+    "@11ty/eleventy-plugin-webc": "^0.11.1",
     "@11tyrocks/eleventy-plugin-emoji-readtime": "^1.0.1",
+    "common-tags": "^1.8.2",
     "eleventy-plugin-embed-everything": "^1.15.1",
     "tailwindcss": "^3.0.23"
   },
