--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "@11tyrocks/eleventy-plugin-emoji-readtime": "^1.0.1",
     "common-tags": "^1.8.2",
     "eleventy-plugin-embed-everything": "^1.15.1",
+    "eleventy-plugin-nesting-toc": "^1.3.0",
+    "markdown-it-anchor": "^8.6.7",
     "tailwindcss": "^3.0.23"
   },
   "devDependencies": {
@@ -47,7 +49,6 @@
     "luxon": "^3.3.0",
     "markdown-it": "^13.0.1",
     "markdown-it-abbr": "^1.0.4",
-    "markdown-it-anchor": "^8.6.5",
     "markdown-it-emoji": "^2.0.2",
     "markdown-it-footnote": "^3.0.3",
     "markdown-it-link-attributes": "^4.0.1",
