--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "eleventy-excellent",
   "version": "1.5.0",
-  "description": "Eleventy starter based on the workflow suggested by Andy Bell's buildexcellentwebsit.es.",
-  "author": "Lene Saile",
+  "description": "Personal Web site of Saad Koubeissi",
+  "author": "Saad Koubeissi",
   "license": "ISC",
   "main": ".eleventy.js",
   "engines": {
