--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "eleventy-excellent",
   "version": "1.5.0",
-  "description": "Personal Web site of Saad Koubeissi",
+  "description": "The personal Web site of Saad Koubeissi — Engineering Manager and front-end software engineer – Saad Koubeissi, Engineering Manager and front-end software engineer",
   "author": "Saad Koubeissi",
   "license": "ISC",
   "main": ".eleventy.js",
