--- a/package.json
+++ b/package.json
@@ -29,10 +29,13 @@
     "@11ty/eleventy-plugin-syntaxhighlight": "^4.1.0",
     "@11ty/eleventy-plugin-webc": "^0.11.1",
     "@11tyrocks/eleventy-plugin-emoji-readtime": "^1.0.1",
+    "@octokit/rest": "^20.0.1",
+    "axios": "^1.4.0",
     "common-tags": "^1.8.2",
     "eleventy-plugin-embed-everything": "^1.15.1",
     "eleventy-plugin-nesting-toc": "^1.3.0",
     "markdown-it-anchor": "^8.6.7",
+    "octokit": "^3.1.0",
     "tailwindcss": "^3.0.23"
   },
   "devDependencies": {
@@ -41,7 +44,7 @@
     "autoprefixer": "^10.4.13",
     "clean-css": "^5.3.1",
     "cssnano": "^6.0.0",
-    "dayjs": "^1.11.5",
+    "dayjs": "^1.11.9",
     "dotenv": "^16.0.3",
     "esbuild": "^0.17.0",
     "html-minifier-terser": "^7.1.0",
